profiler: finally fixed tooltip clipping, DMA tooltips now show line&cycle

--- a/src/client/flame/flame-graph.css
+++ b/src/client/flame/flame-graph.css
@@ -1,8 +1,8 @@
 .tooltip {
-  z-index: 99999;
+  z-index: 100;
   position: absolute;
   box-sizing: border-box;
-  width: 400px;
+/*  width: 400px;*/
   padding: 5px;
   background: var(--vscode-editorWidget-background);
   border: 1px solid var(--vscode-editorWidget-border);
